--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "cookies": "node cookies.js"
+    "cookies": "node cookies.js",
+    "scraper" : "node index.js"
   },
   "author": "Roger Rodrigues",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "dotenv": "^16.4.7",
     "puppeteer": "^23.10.0",
     "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "xlsx": "^0.18.5"
   }
 }
